# ff-harness

./: .dockerignore  .env.example  .gitignore  Dockerfile  HARNESS.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docs/: building.md  design.md  harness.md  http-api.md  implementation-architecture.md  mission.md  overview.html  overview.md  resume.md  test-plan.md  user-stories.md  v1-spec.md
harness/api/: app.py  dependencies.py  view_helpers.py
harness/domain/: website_builder.py
harness/models/: ddl.py  enums.py  envelope.py  ids.py
harness/services/: alarms.py  checkpoints.py  guardrails.py  llm.py  llm_worker.py  orchestrator.py  post_hooks.py  store.py  validators.py  worker.py
harness/services/tools/: __init__.py  brief.py  files.py  mockup.py  user.py
harness/templates/: _base.html  _session_main.html  awaiting.html  index.html  session.html
skills/: bootstrap.md
tests/: conftest.py
tests/api/: test_view_helpers.py  test_web_api.py  test_web_ui.py
tests/models/: test_envelope.py  test_ids.py
tests/services/: test_alarms.py  test_checkpoints.py  test_guardrails.py  test_llm_worker.py  test_mock_worker.py  test_orchestrator_mock.py  test_post_hooks.py  test_store.py  test_tools.py  test_validators.py
